--- a/Lab2.html
+++ b/Lab2.html
@@ -1,17 +1,10 @@
 <!---ข้อ 1-->
 <!--<!DOCTYPE html> มีไว้ให้เข้าว่าไฟท์นี้เขียนด้วยภาษาHTML-->
 <!---ข้อ 2-->
-   <p>ความแตกต่างระหว่างb,strong คือ tag b เน้นข้อความทั้วไปส่วนtag strong ใช้เน้นข้อความที่มีความสำคัญกว่าทั่วไป เพื่อให้เว็บbrowserเข้าใจได้</p>
-   <p>ความแตกต่างระหว่างi,em คือ tag i เน้นข้อความทั้วไปส่วนtag em ใช้เน้นข้อความที่มีความสำคัญกว่าทั่วไป เพื่อให้เว็บbrowserเข้าใจได้</p>
-   <b>b:both</b>
-   <br>
-   <strong>strong:both</strong>
-   <br>
-   <i>i:both</i>
-   <br>
-   <em>em:both</em>
-   <p>I love you</p>
-   <br>
-   <pre>I love you</pre>
+     
+   <pre title="tooltip">ถ้าอยากมีtooltipในelementต้องใช้ attribute ชื่อ titleและใส้ค่าvalue ด้วยข้อความที่เราต้องการ</pre>
 <!---ข้อ 3-->
+<p>ความแตกต่างระหว่างb,strong คือ tag b เน้นข้อความทั้วไปส่วนtag strong ใช้เน้นข้อความที่มีความสำคัญกว่าทั่วไป เพื่อให้เว็บbrowserเข้าใจได้</p>
+<p>ความแตกต่างระหว่างi,em คือ tag i เน้นข้อความทั้วไปส่วนtag em ใช้เน้นข้อความที่มีความสำคัญกว่าทั่วไป เพื่อให้เว็บbrowserเข้าใจได้</p>
 <!---ข้อ 4-->
+ 
