--- a/Lab2.html
+++ b/Lab2.html
@@ -7,4 +7,6 @@
 <p>ความแตกต่างระหว่างb,strong คือ tag b เน้นข้อความทั้วไปส่วนtag strong ใช้เน้นข้อความที่มีความสำคัญกว่าทั่วไป เพื่อให้เว็บbrowserเข้าใจได้</p>
 <p>ความแตกต่างระหว่างi,em คือ tag i เน้นข้อความทั้วไปส่วนtag em ใช้เน้นข้อความที่มีความสำคัญกว่าทั่วไป เพื่อให้เว็บbrowserเข้าใจได้</p>
 <!---ข้อ 4-->
+<p>tag html ที่ทำให้ข้อความย้อนกลับคือ tagที่ชื่อ bdo และต้องใส้ attribute dirโดยมี value เท่ากับ rtl ด้วยนะ</p>
+<bdo dir="rtl">both</bdo>
  
